<resources>
    <string name="app_name">SoofT SaleS</string>
    <string name="field_required">field required</string>
    <string name="login">Login</string>
    <string name="username">userName</string>
    <string name="chooseLanguage">choose Language</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember me</string>
    <string name="sales_invoices">sales invoices</string>
    <string name="return_invoices">Return invoices</string>
    <string name="discout">Discout</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="total_befor_tax">Total Befor Tax :</string>
    <string name="total_after_tax">Total After Tax And Before Discount:</string>
    <string name="total_after_discount">Total After Tax And After Discount :</string>
    <string name="total1">Total Item :</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="wait">Wait</string>
    <string name="english_title">English Title</string>
    <string name="arabic_title">Arabic Title</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="ch_cat">Choose Category</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="tax">Tax</string>
    <string name="tax2">Tax : </string>
    <string name="discount2"> Discount :</string>
    <string name="suc">Succes</string>
    <string name="customer">Customer</string>
    <string name="invoice">Invoice :</string>
    <string name="date_time">Date/Time:</string>
    <string name="client_name">Client Name :</string>
    <string name="total2">"Total : "</string>
    <string name="print">Print</string>
    <string name="r">R.S</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="renew_data">Renew Data</string>
    <string name="incorrect">Incorrect User Or Password</string>
    <string name="logout">Logout</string>
    <string name="vat_no">VAT No :</string>
    <string name="registration_no">Registration No :</string>
    <string name="company">Company :</string>
    <string name="delete">delete</string>
    <string name="ch_imge">Choose Image</string>
    <string name="per">"Dont Have Permission "</string>
    <string name="before">this invoice return before</string>
    <string name="ch_name">Change Name</string>

    <string-array name="langs">
        <item>عربى</item>
        <item>English</item>
    </string-array>
    <string-array name="customer">

        <item>customer1</item>
        <item>customer2</item>
    </string-array>
</resources>