<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/discout"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/linear_shape"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        app:counterEnabled="false"
                        app:endIconMode="clear_text"
                        app:errorEnabled="false"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/edDiscount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:gravity="start|center_vertical"
                            android:hint="@string/discout"
                            android:inputType="numberDecimal"
                            android:lines="1"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="14sp"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="1dp"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/item" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/amount" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/price" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/total" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary" />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/delete" />
                            <View
                                android:layout_width="1dp"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimary" />
                    </LinearLayout>

                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recviewcart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_befor_tax"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"

                        />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tax2"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"

                        />

                    <TextView
                        android:id="@+id/tvTax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount2"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"

                        />

                    <TextView
                        android:id="@+id/tvDiscount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_after_tax"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"

                        />

                    <TextView
                        android:id="@+id/tvtotaltax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_after_discount"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"

                        />

                    <TextView
                        android:id="@+id/tvTotal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />
                </LinearLayout>
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="190dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/btn_shape"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </FrameLayout>


</layout>



