<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@drawable/linear_shape3"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/linear_shape2"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:background="@color/transparent"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/linear_shape2"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/transparent"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:background="@color/green1"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</layout>