<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.sooft_sales.model.AddProductModel" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_add_Product.fragments.Fragment_AddProductStep1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/gray0"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/linear_shape"
                        android:src="@drawable/ic_gallery"

                        />

                    <LinearLayout
                        android:id="@+id/llSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/linear_shape"

                        tools:targetApi="lollipop">

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"


                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <EditText
                        error="@{model.error_english_title}"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/linear_shape"
                        android:hint="@string/english_title"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@={model.english_title}"
                        android:textAlignment="viewStart"
                        android:textSize="13dp"

                        tools:ignore="RtlCompat" />


                    <EditText
                        android:id="@+id/edtarabic"
                        error="@{model.error_arabic_title}"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/linear_shape"
                        android:gravity="start"
                        android:hint="@string/arabic_title"
                        android:padding="5dp"
                        android:text="@={model.arabic_title}"
                        android:textAlignment="viewStart"
                        android:textSize="13sp"

                        tools:ignore="RtlCompat" />


                    <Button
                        android:id="@+id/nextBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/btn_shape"
                        android:paddingLeft="50dp"
                        android:paddingTop="10dp"
                        android:paddingRight="50dp"
                        android:paddingBottom="10dp"
                        android:text="@string/save"
                        android:textAllCaps="false" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>


        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/transparent"
            android:padding="16dp"
            app:el_duration="800"
            app:el_expanded="false"
            app:el_parallax=".5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/flGallery"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">
                        <!--                        android:onClick="@{()->listener.openSheet()}"-->

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_gallery"
                            app:tint="@color/color1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gallery"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/flCamera"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/camera"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>

    </FrameLayout>
</layout>